unpackaged/main/default/objects/Student__c/fields/Course_Cross_Obj_Formula__c.field-meta.xml
<CustomField>
    <fullName>Course_Cross_Obj_Formula__c</fullName>
    <formula>Course__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Cross Obj Formula</label>
    <type>Text</type>
</CustomField>