unpackaged/main/default/objects/Student__c/fields/Crad_Number__c.field-meta.xml
<CustomField>
    <fullName>Crad_Number__c</fullName>
    <label>Crad Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>