unpackaged/main/default/objects/Student__c/fields/Display_Color__c.field-meta.xml
<CustomField>
    <fullName>Display_Color__c</fullName>
    <formula>IF(ISPICKVAL( Country__c , &#39;India&#39;), &#39;Indiagreen&#39;,
IF(ISPICKVAL( Country__c , &#39;UK&#39;), &#39;UKgreen&#39;, 
IF(ISPICKVAL( Country__c , &#39;USA&#39;),&#39;USAgreen&#39;, &#39;red&#39;)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Color</label>
    <type>Text</type>
</CustomField>