unpackaged/main/default/objects/Student__c/fields/Display_Date_By_Formula__c.field-meta.xml
<CustomField>
    <fullName>Display_Date_By_Formula__c</fullName>
    <defaultValue>CASE(
WEEKDAY(TODAY()),
1, TODAY(),
2, TODAY() - 1,
3, TODAY() - 2,
4, TODAY() - 3,
5, TODAY() - 4,
6, TODAY() - 5,
7, TODAY() - 6,
TODAY()
)</defaultValue>
    <label>Display Date By Formula</label>
    <type>Date</type>
</CustomField>