unpackaged/main/default/objects/Student__c/fields/ReportingDate__c.field-meta.xml
<CustomField>
    <fullName>ReportingDate__c</fullName>
    <label>ReportingDate</label>
    <type>Date</type>
</CustomField>