unpackaged/main/default/objects/Student__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <formula>CASE(
  WEEKDAY(TODAY()),
  1, TODAY(),
  2, TODAY() - 1,
  3, TODAY() - 2,
  4, TODAY() - 3,
  5, TODAY() - 4,
  6, TODAY() - 5,
  7, TODAY() - 6,
  TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StartDate</label>
    <type>Date</type>
</CustomField>