unpackaged/main/default/objects/Student__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andhra Pradesh</fullName>
            </value>
            <value>
                <fullName>Telangana</fullName>
            </value>
            <value>
                <fullName>Karnataka</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Kentuky</fullName>
            </value>
            <value>
                <fullName>Texas</fullName>
            </value>
            <value>
                <fullName>England</fullName>
            </value>
            <value>
                <fullName>Scotland</fullName>
            </value>
            <value>
                <fullName>Wales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>