unpackaged/main/default/objects/Student__c/validationRules/Card_Number_Expression.validationRule-meta.xml
<ValidationRule>
    <fullName>Card_Number_Expression</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( REGEX( Crad_Number__c , &#39;[0-9]{4}-[0-9]{4}-[0-9]{4}&#39;) )</errorConditionFormula>
    <errorMessage>Cand Number Should be in a Format &#39;[0-9]{4}-[0-9]{4}-[0-9]{4}&#39;</errorMessage>
</ValidationRule>