unpackaged/main/default/objects/Student__c/validationRules/Course_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>OR(ISBLANK( Course__c ),(Course__c == &#39;&#39;))</errorConditionFormula>
    <errorMessage>Couse Should be Slected</errorMessage>
</ValidationRule>