unpackaged/main/default/objects/Student__c/validationRules/Fee_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Fee_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>Fee__c &lt; 500</errorConditionFormula>
    <errorDisplayField>Fee__c</errorDisplayField>
    <errorMessage>Fee should be more than 500</errorMessage>
</ValidationRule>