unpackaged/main/default/objects/Student__c/validationRules/Phone_Number_Starts_With_Pluse.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Starts_With_Pluse</fullName>
    <active>false</active>
    <errorConditionFormula>LEFT( Phone__c , 1)  &lt;&gt; &#39;+&#39;</errorConditionFormula>
    <errorMessage>Phone Number Shoud Start With &#39;+&#39; Symbol</errorMessage>
</ValidationRule>