unpackaged/main/default/objects/Student__c/validationRules/Pincode_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Pincode_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(CONTAINS( LOWER(Address__c), &#39;pincode&#39;))</errorConditionFormula>
    <errorDisplayField>Address__c</errorDisplayField>
    <errorMessage>Address Should Contain Pincode</errorMessage>
</ValidationRule>