unpackaged/main/default/objects/Student__c/validationRules/State_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>State_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT( ISPICKVAL( Country__c , &#39;&#39;)),ISPICKVAL( State__c , &#39;&#39;) )</errorConditionFormula>
    <errorMessage>State Should be Selected If You Select Country</errorMessage>
</ValidationRule>