unpackaged/main/default/objects/Student__c/validationRules/State_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>State_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( State__c , &#39;Wales&#39;)</errorConditionFormula>
    <errorMessage>You Can&#39;t Select Wales</errorMessage>
</ValidationRule>